src/test/deca/syntax/valid/if_then_3.deca
//Description
//    Vérifier le comportement du if/else
//
//Résultats :
//   Ok
//

{if(true){while(a){;}} else if(false){;}}
