src/test/deca/syntax/invalid/parenthese2.deca
//Description
//    Vérifier la considération des parenthèses
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
if(a==2{;}
}
